--- a/Resources/Private/Templates/Subject/List.html
+++ b/Resources/Private/Templates/Subject/List.html
@@ -1,42 +1,12 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-	<f:layout name="Default" />
+<f:comment><!--
 
-	This Template is responsible for creating a table of domain objects.
+    Render the ePrivacy Consent Manager
 
-	If you modify this template, do not forget to change the overwrite settings
-	in /Configuration/ExtensionBuilder/settings.yaml:
-	  Resources:
-		Private:
-		  Templates:
-			List.html: keep
+    @param array[] subjects			Subjects by type
+    @param Type[] types				Subject types
+    @param Consent consent          Current user's consent status
 
-	Otherwise your changes will be overwritten the next time you save the extension in the extension builder
-
-	<f:section name="content">
-		<h1>Listing for Subject</h1>
-
-		<f:flashMessages />
-
-		<table  class="tx_tweprivacy" >
-			<tr>
-				<th><f:translate key="tx_tweprivacy_domain_model_subject.title" /></th>
-				<th><f:translate key="tx_tweprivacy_domain_model_subject.identifier" /></th>
-				<th><f:translate key="tx_tweprivacy_domain_model_subject.description" /></th>
-				<th> </th>
-				<th> </th>
-			</tr>
-
-			<f:for each="{subjects}" as="subject">
-				<tr>
-					<td><f:link.action action="show" arguments="{subject : subject}"> {subject.title}</f:link.action></td>
-					<td><f:link.action action="show" arguments="{subject : subject}"> {subject.identifier}</f:link.action></td>
-					<td><f:link.action action="show" arguments="{subject : subject}"> {subject.description}</f:link.action></td>
-					<td><f:link.action action="edit" arguments="{subject : subject}">Edit</f:link.action></td>
-					<td><f:link.action action="delete" arguments="{subject : subject}">Delete</f:link.action></td>
-				</tr>
-			</f:for>
-		</table>
-
-		<f:link.action action="new">New Subject</f:link.action>
-	</f:section>
+--></f:comment>
+<html xmlns:f="https://xsd.helhum.io/ns/typo3/cms-fluid/master/ViewHelpers" data-namespace-typo3-fluid="true">
+    <f:render partial="Elements/Consent/Manager" arguments="{_all}"/>
 </html>
