--- a/Resources/Private/Partials/Elements/Consent/Manager.html
+++ b/Resources/Private/Partials/Elements/Consent/Manager.html
@@ -25,25 +25,7 @@
                 </legend>
                 <ol class="Eprivacy__subjects">
                     <f:for each="{subjectsByType}" as="subject">
-                        <li class="Eprivacy__subject">
-                            <f:if condition="{subjectsByType.0.type.needsConsent}">
-                                <f:then>
-                                    <f:form.checkbox name="subjects" property="subjects" value="{subject.identifier}"
-                                                     id="eprivacy-{subject.identifier}" multiple="1"/>
-                                </f:then>
-                                <f:else>
-                                    <f:form.checkbox name="subjects" property="subjects" value="{subject.identifier}"
-                                                     checked="1" disabled="1"
-                                                     id="eprivacy-{subject.identifier}" multiple="1"/>
-                                </f:else>
-                            </f:if>
-                            <label class="Eprivacy__subject-label" for="eprivacy-{subject.identifier}">
-                                <base:heading content="{subject.title}" id="Eprivacy__subject-title">
-                                    <p class="Eprivacy__subject-name">{subject.name}</p>
-                                    <f:format.html>{subject.description}</f:format.html>
-                                </base:heading>
-                            </label>
-                        </li>
+                        <f:render section="Subject" arguments="{subject: subject, subjectsByType: subjectsByType, types: types}"/>
                     </f:for>
                 </ol>
             </fieldset>
@@ -63,4 +45,41 @@
             </f:form.button>
         </div>
     </f:form>
+
+    <f:comment><!--
+
+        Render a subject
+
+        @param Subject subject          Subject
+
+    --></f:comment>
+    <f:section name="Subject">
+        <li class="Eprivacy__subject">
+            <f:if condition="{subjectsByType.0.type.needsConsent}">
+                <f:then>
+                    <f:form.checkbox name="subjects" property="subjects" value="{subject.identifier}"
+                                     id="eprivacy-{subject.identifier}" multiple="1"/>
+                </f:then>
+                <f:else>
+                    <f:form.checkbox name="subjects" property="subjects" value="{subject.identifier}"
+                                     checked="1" disabled="1"
+                                     id="eprivacy-{subject.identifier}" multiple="1"/>
+                </f:else>
+            </f:if>
+            <label class="Eprivacy__subject-label" for="eprivacy-{subject.identifier}">
+                <base:heading content="{subject.title}" id="Eprivacy__subject-title">
+                    <dl>
+                        <dt class="Eprivacy__subject-name-label"><f:translate key="eprivacy.subject.name"/></dt>
+                        <dd class="Eprivacy__subject-name">{subject.name}</dd>
+                        <dt class="Eprivacy__subject-provider-label"><f:translate key="eprivacy.subject.provider"/></dt>
+                        <dd class="Eprivacy__subject-provider">{subject.provider}</dd>
+                        <dt class="Eprivacy__subject-lifetime-label"><f:translate key="eprivacy.subject.lifetime"/></dt>
+                        <dd class="Eprivacy__subject-lifetime">{subject.lifetime}</dd>
+                        <dt class="Eprivacy__subject-purpose-label"><f:translate key="eprivacy.subject.purpose"/></dt>
+                        <dd class="Eprivacy__subject-purpose"><f:format.html>{subject.purpose}</f:format.html></dd>
+                    </dl>
+                </base:heading>
+            </label>
+        </li>
+    </f:section>
 </html>
