Add eprivacy:consent viewhelper

--- a/Resources/Private/Partials/Elements/_Skeleton/Default.html
+++ b/Resources/Private/Partials/Elements/_Skeleton/Default.html
@@ -8,7 +8,7 @@
 --></f:comment>
 <html xmlns:f="https://xsd.helhum.io/ns/typo3/cms-fluid/master/ViewHelpers"
       xmlns:base="http://typo3.org/ns/Tollwerk/TwBase/ViewHelpers"
-      xmlns:tw="http://typo3.org/ns/Tollwerk/tw_tollwerk/ViewHelpers"
+      xmlns:eprivacy="http://typo3.org/ns/Tollwerk/tw_eprivacy/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
 </html>
