--- a/Resources/Private/Templates/Subject/List.html
+++ b/Resources/Private/Templates/Subject/List.html
@@ -7,6 +7,14 @@
     @param Consent consent          Current user's consent status
 
 --></f:comment>
-<html xmlns:f="https://xsd.helhum.io/ns/typo3/cms-fluid/master/ViewHelpers" data-namespace-typo3-fluid="true">
+<html xmlns:f="https://xsd.helhum.io/ns/typo3/cms-fluid/master/ViewHelpers"
+      xmlns:eprivacy="http://typo3.org/ns/Tollwerk/tw_eprivacy/ViewHelpers"
+      data-namespace-typo3-fluid="true">
     <f:render partial="Elements/Consent/Manager" arguments="{_all}"/>
+
+    <eprivacy:consent identifier="{0: 'eprivacy.consent', 1: 'google.analytics.ga'}">
+        <f:then>Google Analytics is allowed</f:then>
+        <f:else>Google Analytics is not allowed</f:else>
+    </eprivacy:consent>
+
 </html>
