--- a/Resources/Private/Templates/Subject/List.html
+++ b/Resources/Private/Templates/Subject/List.html
@@ -17,4 +17,5 @@
         <f:else>Google Analytics is not allowed</f:else>
     </eprivacy:consent>
 
+    <button type="button" onclick="var date=new Date();date.setTime(date.getTime() + 24*60*60*1000);document.cookie='test=valid; expires='+date.toUTCString()+'; path=/';window.location.reload(true);">Set cookie &amp; reload</button>
 </html>
