--- a/Resources/Private/Templates/Content/NeedsConsent.html
+++ b/Resources/Private/Templates/Content/NeedsConsent.html
@@ -2,45 +2,52 @@
 
     Content needs consent message
 
-    @param array[] subjects			Subjects
-
+    @param int      uid             UID of the content element
+    @param array[]  consentItems    Subject identifiers of required cookies for this content
 
 --></f:comment>
 <html xmlns:f="https://xsd.helhum.io/ns/typo3/cms-fluid/master/ViewHelpers"
       xmlns:eprivacy="http://typo3.org/ns/Tollwerk/tw_eprivacy/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-    <f:variable name="subjects" value="{eprivacy:findSubjectsByName(names: consentItems)}"/>
-
     <aside class="CookieNeedsConsent">
+        <f:comment><!-- Get full subject records --></f:comment>
+        <f:variable name="subjects" value="{eprivacy:findSubjectsByName(names: consentItems)}"/>
+
+        <f:comment><!-- Description text --></f:comment>
         <p class="CookieNeedsConsent__text">
             {f:translate(key: 'content.needsConsent.text', arguments: {0: header})}
         </p>
-        <f:debug>{subjects}</f:debug>
 
+        <f:comment><!-- List of required subjects --></f:comment>
         <ul class="CookieNeedsConsent__subjects">
-            <f:for each="{subjects.byIdentifier}"as="subject">
+            <f:for each="{subjects.byIdentifier}" as="subject">
                 <li class="CookieNeedsConsent__subject">
                     <details>
                         <summary>{subject.title}</summary>
                         <f:format.html>{subject.purpose}</f:format.html>
                     </details>
-
                 </li>
             </f:for>
         </ul>
-        <p>
-            Klicken Sie
-            <f:link.action
-                    pageUid="473"
-                    action="addConsent"
-                    controller="Subject"
-                    pluginName="Eprivacy"
-                    extensionName="TwEprivacy"
-                    arguments="{pid: 1, addIdentifiers: subjects.identifiers}"
-                    section="c{uid}"
-            >hier</f:link.action>
-            , um diese Cookies zu akzeptieren. Alle Cookie-Einstellungen Sie finden sie <f:link.page pageUid="473">dieser Seite</f:link.page>.
+
+        <f:comment><!-- Accept cookies --></f:comment>
+        <f:variable name="acceptUrl"
+                    value="{f:uri.action(
+                        pageUid: 473,
+                        action: 'addConsent',
+                        controller: 'Subject',
+                        pluginName: 'Eprivacy',
+                        extensionName: 'TwEprivacy',
+                        section: 'c{uid}',
+                        arguments: '{pid: 1, addIdentifiers: subjects.identifiers}'
+                    )}"
+        />
+        <f:variable name="pluginPageUrl" value="{f:uri.page(pageUid: 473)}" />
+        <f:debug>{acceptUrl}</f:debug>
+        <f:debug>{pluginPageUrl}</f:debug>
+        <p class="CookieNeedsConsent__actions">
+            <f:format.raw>{f:translate(key: 'content.needsConsent.actions', arguments: {0: acceptUrl, 1: pluginPageUrl})}</f:format.raw>
         </p>
     </aside>
 
