Change inclusion of TypoScript setup to be conform with newest best practices.

--- a/Resources/Private/Templates/Subject/Dialog.html
+++ b/Resources/Private/Templates/Subject/Dialog.html
@@ -8,6 +8,7 @@
       data-namespace-typo3-fluid="true">
 
 
+<h1>Dialog.html!</h1>
 
     <!-- Show dialog, but only if eprivacy_consent cookie was not set yet. -->
     <f:if condition="{eprivacy:getCookie(name: 'eprivacy_consent')}">
