[WIP] Change rendering of content element substitutes.

--- a/Resources/Private/Templates/Content/NeedsConsent.html
+++ b/Resources/Private/Templates/Content/NeedsConsent.html
@@ -19,22 +19,20 @@
 
         <f:comment><!-- Description text --></f:comment>
         <p class="CookieNeedsConsent__text">
-            {f:translate(key: 'content.needsConsent.text', arguments: {0: data.header})}
+            {f:translate(key: 'content.needsConsent.text', arguments: {0: data.header}, extensionName: 'TwEprivacy')}
         </p>
 
         <f:comment><!-- List of required subjects --></f:comment>
         <ul class="CookieNeedsConsent__subjects">
             <f:for each="{subjects.byIdentifier}" as="subject">
                 <li class="CookieNeedsConsent__subject">
-                    <details>
-                        <summary>{subject.title}</summary>
-                        <f:format.html>{subject.purpose}</f:format.html>
-                    </details>
+                        <strong>{subject.title}</strong>: <f:format.html>{subject.purpose}</f:format.html>
                 </li>
             </f:for>
         </ul>
 
         <f:comment><!-- Accept cookies --></f:comment>
+        <f:comment><!--
         <f:variable name="acceptUrl"
                     value="{f:uri.action(
                         pageUid: settings.pluginPid,
@@ -45,11 +43,16 @@
                         section: 'c{data.uid}',
                         arguments: '{pid: data.pid, addIdentifiers: subjects.identifiers}'
                     )}"
-        />
-        <f:variable name="pluginPageUrl" value="{f:uri.page(pageUid: settings.pluginPid)}"/>
+        />--></f:comment>
+        <!--
+// https://rws-ammunition.com/de/cookie-einstellungen?tx_tweprivacy_eprivacy%5Baction%5D=addConsent&tx_tweprivacy_eprivacy%5BaddIdentifiers%5D%5B0%5D=youtube&tx_tweprivacy_eprivacy%5Bcontroller%5D=Subject&tx_tweprivacy_eprivacy%5Bpid%5D=1&cHash=f8b930bf78c63e974542a08853073094#c2165
+-->
+        <a href="t3://page?uid=4?&tx_tweprivacy_eprivacy[action]=addConsent&tx_tweprivacy_eprivacy[addIdentifiers][]=foo&tx_tweprivacy_eprivacy[controller]=Subject&tx_tweprivacy_eprivacy[pid]=1">Test</a>
+
+        <f:comment><!-- <f:variable name="pluginPageUrl" value="{f:uri.page(pageUid: settings.pluginPid)}"/>--></f:comment>
         <p class="CookieNeedsConsent__actions">
             <f:format.raw>{f:translate(key: 'content.needsConsent.actions', arguments: {0: acceptUrl, 1:
-                pluginPageUrl})}
+                pluginPageUrl}, extensionName: 'TwEprivacy')}
             </f:format.raw>
         </p>
     </aside>
