--- a/Resources/Private/Templates/Content/MissingConsent.html
+++ b/Resources/Private/Templates/Content/MissingConsent.html
@@ -43,3 +43,9 @@
         </p>
     </aside>
 </f:spaceless></html>
+
+
+<f:comment><!--
+                <a href="{eprivacy:missingConsent.acceptT3Link(contentUid: data.uid,identifiers: subjects.identifiers)}">{f:translate(key: 'content.needsConsent.link.accept', extensionName: 'TwEprivacy')}</a>
+                <a href="{eprivacy:missingConsent.settingsT3Link()}">{f:translate(key: 'content.needsConsent.link.settings', extensionName: 'TwEprivacy')}</a>
+                --></f:comment>
